# Homework_4sem

./: Project1.sln  README.md
Project1/: Project1.vcxproj  Source.cpp
Timer/: CMakeLists.txt  Timer.cpp
homework_10/: CMakeLists.txt  Client.cpp  Server.cpp
homework_11/: CMakeLists.txt  Entities.h  class_Animation.h  class_Game.h  good_asteroids.cpp  one_file.cpp
homework_12/: CMakeLists.txt
homework_12/Task1/: calculator.cpp  visualizer.cpp  visualizer.hpp
homework_12/Task2/: main.cpp  system.cpp  system.hpp
homework_12/Task3/: calculator.cpp  calculator.hpp  main.cpp  visualizer.cpp  visualizer.hpp
homework_2/: CMakeLists.txt  Sort.cpp  Timer.h  Vector.cpp  vector_to_multiarray_raw.cpp
homework_3/: CMakeLists.txt  Task1.cpp  Task2.cpp  Task3.cpp  Task4.cpp  Task5.cpp  Timer.h
homework_4/: CMakeLists.txt  additional_task.cpp  algorithms.cpp
homework_5/: CMakeLists.txt  Task1.cpp  Task2.cpp  Task3.cpp  Task4.cpp  text_task3.txt  text_task4.txt
homework_6/: CMakeLists.txt  Task1.cpp  Task2.cpp  Task3.cpp  Task4.cpp  test_no_comment.txt
homework_6/jsons/: json0.txt  json1.txt  json2.txt
homework_7/: CMakeLists.txt  Task1.cpp  Task2.cpp  Task3.cpp  Task4.cpp  Timer.h
homework_8/: CMakeLists.txt  Task1.cpp  Task2.cpp  Task3.cpp  Task4.cpp  client.cpp  sem.cpp  threadsafe_stack.h
homework_9/: CMakeLists.txt  Chat.cpp
